--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@types/events": "^3.0.0",
+    "angular-datatables": "^11.0.0",
     "bootstrap": "^4.5.3",
+    "datatables.net": "^1.10.23",
+    "datatables.net-dt": "^1.10.23",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
@@ -36,7 +39,9 @@
     "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
